--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-I'm JC !!
+<h1>I'm JC !!</h1>
 
 
-Making changes from local VSCode
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium ullam saepe dolores repellendus laudantium, et architecto odit facere corporis atque, dolor alias laboriosam ex totam amet asperiores cupiditate. Sed, saepe.</p>
