--- a/index.html
+++ b/index.html
@@ -9,26 +9,38 @@
 <body>
   
   <div>
-    <ul><a href="firstexercise.html">firstexercise</a></ul>
+    <ul>
+      <li><a href="firstexercise.html">firstexercise</a></li>
+    </ul>
   </div>
   
   <div>
-    <ul><a href="secondexercise.html">secondexercise</a></ul>
+    <ul>
+      <li><a href="secondexercise.html">secondexercise</a></li>
+    </ul>
   </div>
   
   <div>
-    <ul> <a href="thirdexercise.html">thirdexercise</a></ul>
+    <ul>
+       <a href="thirdexercise.html">thirdexercise</a></li>
+      </ul>
   </div>
   
   <div>
-    <ul><a href="fourthexercise.html">fourthexercise</a></ul>
+    <ul>
+      <li></li><a href="fourthexercise.html">fourthexercise</a></li>
+    </ul>
   </div>
   <div>
-    <ul> <a href="messiexercise.html">messiexercise</a></ul>
+    <ul> 
+      <li></li><a href="messiexercise.html">messiexercise</a></li>
+    </ul>
   <div>
     
   <div>
-    <ul> <a href="stylingtextexercise.html">stylingtextexercise</a></ul> 
+    <ul>
+       <li><a href="stylingtextexercise.html">stylingtextexercise</a></li>
+    git</ul> 
   </div>
     
 </body>
