--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
   
   <div>
     <ul>
-       <a href="thirdexercise.html">thirdexercise</a></li>
-      </ul>
+       <li><a href="thirdexercise.html">thirdexercise</a></li>
+    </ul>
   </div>
   
   <div>
     <ul>
-      <li></li><a href="fourthexercise.html">fourthexercise</a></li>
+      <li><a href="fourthexercise.html">fourthexercise</a></li>
     </ul>
   </div>
   <div>
     <ul> 
-      <li></li><a href="messiexercise.html">messiexercise</a></li>
+      <li>g<a href="messiexercise.html">messiexercise</a></li>
     </ul>
   <div>
     
