--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   <link rel="stylesheet" href="firstexercise.css">
 </head>
 <body>
+  <div>
   <a href="firstexercise.html">firstexercise</a>
   <a href="secondexercise.html">secondexercise</a>
   <a href="thirdexercise.html">thirdexercise</a>
   <a href="fourthexercise.html">fourthexercise</a>
   <a href="messiexercise.html">messiexercise</a>
   <a href="stylingtextexercise.html">stylingtextexercise</a>
+  </div>
 </body>
 </html>
