--- a/index.html
+++ b/index.html
@@ -7,13 +7,29 @@
   <link rel="stylesheet" href="firstexercise.css">
 </head>
 <body>
+  
   <div>
-  <a href="firstexercise.html">firstexercise</a>
-  <a href="secondexercise.html">secondexercise</a>
-  <a href="thirdexercise.html">thirdexercise</a>
-  <a href="fourthexercise.html">fourthexercise</a>
-  <a href="messiexercise.html">messiexercise</a>
-  <a href="stylingtextexercise.html">stylingtextexercise</a>
+    <ul><a href="firstexercise.html">firstexercise</a></ul>
   </div>
+  
+  <div>
+    <ul><a href="secondexercise.html">secondexercise</a></ul>
+  </div>
+  
+  <div>
+    <ul> <a href="thirdexercise.html">thirdexercise</a></ul>
+  </div>
+  
+  <div>
+    <ul><a href="fourthexercise.html">fourthexercise</a></ul>
+  </div>
+  <div>
+    <ul> <a href="messiexercise.html">messiexercise</a></ul>
+  <div>
+    
+  <div>
+    <ul> <a href="stylingtextexercise.html">stylingtextexercise</a></ul> 
+  </div>
+    
 </body>
 </html>
